--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,10 @@
   --foreground: #171717;
 }
 
+html {
+  font-size: 17px;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
